# kubevirt

./: BUILD.bazel  WORKSPACE
api/openapi-spec/: swagger.json
cmd/virt-handler/: virt-handler.go
containerimages/: BUILD.bazel
docs/: metrics.md
hack/: bazel-generate.sh  bazel-push-images.sh  config-default.sh  metric_name_linter.sh  rpm-deps.sh
hack/prom-metric-linter/: custom_linter_rules.go  metric_name_linter.go  metrics_collector.go
pkg/cloud-init/: cloud-init.go
pkg/healthz/: healthz.go
pkg/monitoring/domainstats/prometheus/: prometheus.go  prometheus_test.go
pkg/monitoring/metrics/virt-handler/collector/: collector.go
pkg/util/migrations/: migrations.go
pkg/virt-api/: api.go
pkg/virt-api/webhooks/: utils.go
pkg/virt-api/webhooks/mutating-webhook/mutators/: namespace-limits.go  namespace-limits_test.go  vmi-mutator.go
pkg/virt-api/webhooks/validating-webhook/: validating-webhook.go
pkg/virt-api/webhooks/validating-webhook/admitters/: BUILD.bazel  pod-eviction-admitter.go  vms-admitter.go  vms-admitter_test.go
pkg/virt-config/: virt-config.go
pkg/virt-controller/services/: renderresources.go  template.go
pkg/virt-controller/watch/: application.go  vm.go  vm_test.go
pkg/virt-controller/watch/drain/evacuation/: evacuation.go
pkg/virt-controller/watch/topology/: tsc_test.go
pkg/virt-handler/: vm.go  vm_test.go
pkg/virt-handler/device-manager/: device_controller.go  generic_device.go
pkg/virt-launcher/virtwrap/: BUILD.bazel  manager.go
pkg/virt-launcher/virtwrap/agent-poller/: agent_parser.go
pkg/virt-launcher/virtwrap/api/: converter.go
pkg/virt-launcher/virtwrap/converter/: converter.go  storage.go
pkg/virt-launcher/virtwrap/stats/: types.go
pkg/virt-launcher/virtwrap/statsconv/util/: domstats_utils.go
pkg/virt-operator/resource/apply/: apps.go  prometheus.go  prometheus_test.go
pkg/virt-operator/resource/generate/components/: crds.go  prometheus.go  prometheus_test.go  validations_generated.go
pkg/virt-operator/resource/generate/install/: strategy.go
pkg/virt-operator/resource/generate/rbac/: apiserver.go
pkg/virt-operator/util/: config.go  env_var_manager.go  image_name_parser.go  image_name_parser_test.go
pkg/virt-operator/webhooks/: BUILD.bazel  kubevirt-update-admitter.go
rpm/: BUILD.bazel
staging/src/kubevirt.io/api/core/v1/: deepcopy_generated.go  schema.go  schema_swagger_generated.go  types.go  types_swagger_generated.go
staging/src/kubevirt.io/api/instancetype/v1alpha1/: conversion_generated.go
staging/src/kubevirt.io/api/instancetype/v1alpha2/: conversion_generated.go
staging/src/kubevirt.io/api/instancetype/v1beta1/: deepcopy_generated.go  types.go  types_swagger_generated.go
staging/src/kubevirt.io/client-go/api/: openapi_generated.go
staging/src/kubevirt.io/client-go/api/v1/: types.go
tests/: BUILD.bazel  config_test.go  credentials_test.go  infra_test.go  migration_test.go  operator_test.go  storage_test.go  utils.go  vm_test.go  vmi_configuration_test.go  vmi_lifecycle_test.go  vmi_multus_test.go
tests/hotplug/: BUILD.bazel  cpu.go
tests/libvmi/: factory.go  storage.go
tests/operator/: operator.go
tests/storage/: hotplug.go
tests/testsuite/: fixture.go
tools/manifest-templator/: manifest-templator.go
